--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,7 @@
 [package]
 
-name = "rust-gpx"
+name = "gpx"
+description = "Rust read/write support for GPS Exchange Format (GPX)"
+license = "Apache-2.0"
 version = "0.0.1"
 authors = ["Corey Farwell <coreyf@rwell.org>"]
