Rust rustfmt, update Travis config to reflect rustfmt flag changes.
`--write-mode=diff` was renamed to `--check`

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_script:
   - cargo +nightly install --force rustfmt-nightly
 
 script:
-  - cargo +nightly fmt -- --write-mode=diff
+  - cargo +nightly fmt -- --check
   - cargo build --verbose
   - cargo test --verbose
 
