Use geo-types instead of geo.
Since we only use the types that have been factored out into the
geo-types crate, there is no need to include the whole geo crate
anymore.

We do, however, still need the geo crate as a dev-dependency, as the
some of its algorithms are used by our tests.

Closes #13

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,11 @@ documentation = "https://docs.rs/gpx"
 repository = "https://github.com/georust/gpx"
 
 [dependencies]
-geo = "0.10"
+geo-types = "0.2"
 xml-rs = "0.8"
 chrono = "0.4"
 error-chain = "0.11.0"
 assert_approx_eq = "1.0.0"
+
+[dev-dependencies]
+geo = "0.10"
