--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,7 +30,15 @@ jobs:
         working-directory: .
     strategy:
       matrix:
-        container_image: ["georust/geo-ci:rust-1.53", "georust/geo-ci:rust-1.59"]
+        container_image:
+          # We aim to support rust-stable plus (at least) the prior 3 releases,
+          # giving us about 6 months of coverage.
+          #
+          # Minimum supported rust version (MSRV)
+          - "georust/geo-ci:proj-9.0.0-rust-1.56"
+          # Two most recent releases - we omit older ones for expedient CI
+          - "georust/geo-ci:proj-9.0.0-rust-1.58"
+          - "georust/geo-ci:proj-9.0.0-rust-1.59"
     container:
       image: ${{ matrix.container_image }}
     steps:
