--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,9 +35,10 @@ jobs:
           # giving us about 6 months of coverage.
           #
           # Minimum supported rust version (MSRV)
-          - "georust/geo-ci:proj-9.1.0-rust-1.64"
+          - "georust/geo-ci:rust-1.65"
           # Two most recent releases - we omit older ones for expedient CI
-          - "georust/geo-ci:proj-9.0.0-rust-1.59"
+          - "georust/geo-ci:rust-1.66"
+          - "georust/geo-ci:rust-1.67"
     container:
       image: ${{ matrix.container_image }}
     steps:
