--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,9 @@
-on: push
+on: 
+  push:
+    branches: [ "master" ]
+  pull_request:
+    branches: [ "master" ]
+
 name: Run tests
 jobs:
   # The `ci-result` job doesn't actually test anything - it just aggregates the
