--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,10 +40,10 @@ jobs:
           # giving us about 6 months of coverage.
           #
           # Minimum supported rust version (MSRV)
-          - "georust/geo-ci:rust-1.77"
+          - "ghcr.io/georust/geo-ci:proj-9.4.0-rust-1.74"
           # Two most recent releases - we omit older ones for expedient CI
-          - "georust/geo-ci:rust-1.80"
-          - "georust/geo-ci:rust-1.81"
+          - "ghcr.io/georust/geo-ci:proj-9.4.0-rust-1.78"
+          - "ghcr.io/georust/geo-ci:proj-9.4.0-rust-1.79"
     container:
       image: ${{ matrix.container_image }}
     steps:
