--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,4 @@ serde = { version = "1.0", features = ["derive"], optional = true }
 [dev-dependencies]
 assert_approx_eq = "1"
 geo = "0.28"
+tempfile = "3.20.0"
