Fix CI for rustup v1.28.0 and later
rustup v1.28.0 included a breaking change to how command line arguments
are parsed, see https://github.com/rust-lang/rustup/issues/4220 for more
context.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -49,7 +49,7 @@ jobs:
 
       - name: Install stable
         run: |
-          rustup toolchain install ${{ matrix.toolchain }} --no-self-update --profile minimal --component rust-src rustfmt clippy
+          rustup toolchain install ${{ matrix.toolchain }} --no-self-update --profile minimal --component rust-src,rustfmt,clippy
 
       - name: Check with Rustfmt
         run: cargo fmt --all --check
